<resources>
    <string name="app_name">tu_guia</string>
    <string name="login_txtEmail_hint">Digite el email.</string>
    <string name="login_txtClave_hint">Digite la contraseña.</string>
    <string name="login_btnAcceder_text">Acceder</string>
    <string name="login_btnRegistrar_text">Registrar</string>
    <string name="acerca_de_txv_1_text">Creado por:</string>
    <string name="acerca_de_txv_2_text">GRUPO 3</string>
    <string name="acerca_de_txv_3_text">Leidy Yohana León Rodríguez</string>
    <string name="acerca_de_btn_1_text">VOLVER</string>
    <string name="frm_nuevo_sitio_txv_1_text">NUEVO SITIO</string>
    <string name="frm_nuevo_sitio_edt_1_hint">Ingrese el nombre del sitio</string>
    <string name="frm_nuevo_sitio_edt_2_hint">Ingrese la descripción del sitio</string>
    <string name="frm_nuevo_sitio_edt_3_hint">Digite o ubique la latitud del sitio</string>
    <string name="frm_nuevo_sitio_edt_4_hint">Digite o ubique la longitud del sitio</string>
    <string name="frm_nuevo_sitio_btn_guardar_text">Guardar</string>
    <string name="frm_nuevo_sitio_btn_cancelar_text">Cancelar</string>


</resources>