<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frm_nuevo_sitio">

    <TextView
        android:id="@+id/frm_nuevo_sitio_txv_1"
        android:layout_width="412dp"
        android:layout_height="99dp"
        android:background="#E8A7F3"
        android:text="@string/frm_nuevo_sitio_txv_1_text"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/frm_nuevo_sitio_spn_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/sitiosarray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_nuevo_sitio_txv_1" />

    <EditText
        android:id="@+id/frm_nuevo_sitio_edt_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/frm_nuevo_sitio_edt_1_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_nuevo_sitio_spn_1" />

    <EditText
        android:id="@+id/frm_nuevo_sitio_edt_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/frm_nuevo_sitio_edt_2_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_nuevo_sitio_edt_1" />

    <EditText
        android:id="@+id/frm_nuevo_sitio_edt_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/frm_nuevo_sitio_edt_3_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_nuevo_sitio_edt_2" />

    <EditText
        android:id="@+id/frm_nuevo_sitio_edt_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/frm_nuevo_sitio_edt_4_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_nuevo_sitio_edt_3" />

    <Button
        android:id="@+id/frm_nuevo_sitio_btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/frm_nuevo_sitio_btn_guardar_text"
        app:icon="@android:drawable/ic_menu_save"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_nuevo_sitio_edt_4" />

    <Button
        android:id="@+id/frm_nuevo_sitio_btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/frm_nuevo_sitio_btn_cancelar_text"
        app:icon="@android:drawable/ic_delete"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toStartOf="@+id/frm_nuevo_sitio_btn_guardar"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/frm_nuevo_sitio_btn_cancelar2"
        app:layout_constraintTop_toBottomOf="@+id/frm_nuevo_sitio_edt_4" />

    <Button
        android:id="@+id/frm_nuevo_sitio_btn_cancelar2"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="58dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:icon="@android:drawable/ic_menu_mylocation"
        app:iconTintMode="src_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frm_nuevo_sitio_edt_4" />

</androidx.constraintlayout.widget.ConstraintLayout>